Prevent list selection/content from wrapping

--- a/hawtio-web/src/main/webapp/css/site-base.css
+++ b/hawtio-web/src/main/webapp/css/site-base.css
@@ -336,6 +336,7 @@ ol.inline > li {
 
 .list-row {
   height: 30px;
+  white-space: nowrap;
 }
 
 .list-row .ngCellText {
